--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(path + 'Input\\\\inpe_brazilian_amazon_fires_1999_2019.csv')\n",
-    "df.to_excel(path + 'Input\\\\Dataset_Brazilian_Deforestation.xlsx', index=False)\n",
+    "df.to_excel(path + 'Dataset_Brazilian_Deforestation.xlsx', index=False)\n",
     "df1 = df[['year', 'month', 'state', 'firespots']]\n",
     "df_year_all_states = df1.copy()"
    ]
